@@ -2,6 +2,7 @@
 <ul>
     <li>Initialize Notification on Load</li>
     <li>add About Entry for 2020.1+</li>
+    <li>#231 jobs in folders: collapsed after refresh</li>
 </ul>
 <h3>0.13.7</h3>
 <ul>
